--- a/form_validation_1.html
+++ b/form_validation_1.html
@@ -64,7 +64,7 @@
 			</div>
 			<button type="button" name="form_validate">SUBMIT</button>
 		</form>
-	<script src="jquery/jquery-3.7.1.js"></script>
+	<script src="js/jquery-3.7.1.js"></script>
 	<script src="js/form_validation.js"></script>
 	</body>
 </html>
